--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-lg-6 col-md-12 col-6 navbar-items nav-box">    
                         <ul class="nav-list">
-                            <li class="mobile-menu-hamburger"><button class="nav-hamburger" type="button"><i class="fa-solid fa-bars nav-hamburger"></i></button></li>
+                            <li class="mobile-menu-hamburger"><button class="nav-hamburger" type="button"><i class="fa-solid fa-bars nav-hamburger-icon"></i></button>
                                 <ul class="nav-items mobile-menu">
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">HOME</a>
@@ -35,6 +35,7 @@
                                         <a href="#" class="nav-link">CONTACT</a>
                                     </li>
                                 </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
